done except img

--- a/img/Markdown naar HTML.html
+++ b/img/Markdown naar HTML.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/normalize.css" />
-    <link rel="stylesheet" href="../css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono" rel="stylesheet">
+<!-- saved from url=(0074)file:///Users/sennpatteet/Desktop/becode_projects/markdown/html/index.html -->
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./Markdown naar HTML_files/normalize.css">
+    <link rel="stylesheet" href="./Markdown naar HTML_files/style.css">
+    <link href="./Markdown naar HTML_files/css" rel="stylesheet">
 
     <title>Markdown naar HTML</title>
   </head>
@@ -13,10 +13,10 @@
     <nav>
       <h2 style="display: none;">Navigatie</h2>
       <ul>
-        <li><a href="index.html">Start</a></li>
-        <li><a href="https://becode.org">BeCode</a></li>
-        <li><a href="beacon.html">The Beacon</a></li>
-        <li><a href="about.html">About</a></li>
+        <li><a href="file:///Users/sennpatteet/Desktop/becode_projects/markdown/html/index.html">Start</a></li>
+        <li><a href="https://becode.org/">BeCode</a></li>
+        <li><a href="file:///Users/sennpatteet/Desktop/becode_projects/markdown/html/beacon.html">The Beacon</a></li>
+        <li><a href="file:///Users/sennpatteet/Desktop/becode_projects/markdown/html/about.html">About</a></li>
       </ul>
     </nav>
     <div id="container">
@@ -42,42 +42,44 @@
         <section class="opsomming">
           <div>
             <label for="git">git</label>
-            <input type="checkbox" id="git" name="name" />
+            <input type="checkbox" id="git" name="name">
           </div>
           <div>
             <label for="html">HTML</label>
-            <input type="checkbox" id="html" name="name" />
+            <input type="checkbox" id="html" name="name">
           </div>
           <div>
             <label for="css">CSS</label>
-            <input type="checkbox" id="css" name="name" />
+            <input type="checkbox" id="css" name="name">
           </div>
           <div>
             <label for="js">Javascript</label>
-            <input type="checkbox" id="js" name="name" />
+            <input type="checkbox" id="js" name="name">
           </div>
           <div>
             <label for="PHP">PHP</label>
-            <input type="checkbox" id="php" name="name" />
+            <input type="checkbox" id="php" name="name">
           </div>
         </section>
 
 
 
         <article class="git">
+          <div class="gitflex">
           <h3>GIT</h3>
-          <img src="../img/git.png" alt="GIT" width="100px" />
+          <img src="./Markdown naar HTML_files/git.jpg" alt="GIT" width="100px">
           <p>
             Kevin burgdoggen brisket cupim chuck bresaola kielbasa ham boudin.
             Shoulder cow beef ribs leberkas, buffalo capicola andouille tail
             kevin shankle prosciutto. Chuck cupim kielbasa,
             <em>hamburger</em> pork loin swine jerky.
           </p>
+          </div>
         </article>
 
         <article class="html">
           <h3>HTML</h3>
-          <img src="../img/html.png" alt="HTML" width="100px" />
+          <img src="./Markdown naar HTML_files/html.jpg" alt="HTML" width="100px">
           <p>
             Bacon ipsum dolor amet leberkas venison bresaola prosciutto.
             Capicola sirloin chuck cupim short loin burgdoggen ham hock salami
@@ -89,7 +91,7 @@
 
         <article class="css">
           <h3>CSS</h3>
-          <img src="../img/css.png" alt="CSS" width="100px" />
+          <img src="./Markdown naar HTML_files/css.jpg" alt="CSS" width="100px">
           <p>
             <em>Turkey salami</em> pig chicken. Beef ribs tail pastrami
             frankfurter hamburger swine porchetta tongue tri-tip jowl landjaeger
@@ -124,5 +126,6 @@
       </section>
     </main>
   </div> <!--  end of container -->
-  </body>
-</html>
+  
+
+</body></html>
