--- a/html/index.html
+++ b/html/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/normalize.css" />
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/normalize.css" />
+    <link rel="stylesheet" href="../css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono" rel="stylesheet">
 
     <title>Markdown naar HTML</title>
@@ -66,7 +66,7 @@
 
         <article class="git">
           <h3>GIT</h3>
-          <img src="img/git.png" alt="GIT" width="100px" />
+          <img src="../img/git.png" alt="GIT" width="100px" />
           <p>
             Kevin burgdoggen brisket cupim chuck bresaola kielbasa ham boudin.
             Shoulder cow beef ribs leberkas, buffalo capicola andouille tail
@@ -77,7 +77,7 @@
 
         <article class="html">
           <h3>HTML</h3>
-          <img src="img/html.png" alt="HTML" width="100px" />
+          <img src="../img/html.png" alt="HTML" width="100px" />
           <p>
             Bacon ipsum dolor amet leberkas venison bresaola prosciutto.
             Capicola sirloin chuck cupim short loin burgdoggen ham hock salami
@@ -89,7 +89,7 @@
 
         <article class="css">
           <h3>CSS</h3>
-          <img src="img/css.png" alt="CSS" width="100px" />
+          <img src="../img/css.png" alt="CSS" width="100px" />
           <p>
             <em>Turkey salami</em> pig chicken. Beef ribs tail pastrami
             frankfurter hamburger swine porchetta tongue tri-tip jowl landjaeger
