Add About.html & About.css

--- a/html/index.html
+++ b/html/index.html
@@ -19,6 +19,7 @@
         <li><a href="about.html">About</a></li>
       </ul>
     </nav>
+
     <div id="container">
 
     <header>
@@ -37,7 +38,7 @@
       </section>
 
       <section>
-        <h2>Deze technologieën zijn we straks meester</h2>
+        <h2>Van deze technologieën zijn we straks meester</h2>
 
         <section class="opsomming">
           <div>
