--- a/html/about.html
+++ b/html/about.html
@@ -1,17 +1,52 @@
-<h1 id="about">About</h1>
-<ul>
-<li><a href="index.md">Start</a></li>
-<li><a href="https://becode.org/">BeCode</a></li>
-<li><a href="beacon.md">The Beacon</a></li>
-<li><a href="about.md">About</a></li>
-</ul>
-<p>We zijn:</p>
-<ul>
-<li>leuk</li>
-<li>aangenaam</li>
-<li>plezant</li>
-<li>amusant</li>
-<li>behaaglijk</li>
-<li>plezierig</li>
-<li>prettig</li>
-</ul>
+<!doctype html>
+
+<html lang="en">
+<head>
+
+  <!-- META --------------------------------------------------------->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- TITLE --------------------------------------------------------->
+  <title>About</title>
+
+  <!-- LINKS --------------------------------------------------------->
+  <link rel="stylesheet" href="../css/normalize.css">
+  <link rel="stylesheet" href="../css/about.css">
+
+</head>
+
+<body>
+
+  <nav>
+    <ul>
+    <li><a href="index.md">Start</a></li>
+    <li><a href="https://becode.org/">BeCode</a></li>
+    <li><a href="beacon.md">The Beacon</a></li>
+    <li><a href="about.md">About</a></li>
+    </ul>
+  </nav>
+
+
+  <div id="container">
+
+    <h1 class="about">About</h1>
+
+    <div class="wezijn">
+    <p><strong>We zijn:</strong></p>
+
+    <ul class="behaaglijk">
+      <li>leuk</li>
+      <li>aangenaam</li>
+      <li>plezant</li>
+      <li>amusant</li>
+      <li>behaaglijk</li>
+      <li>plezierig</li>
+      <li>prettig</li>
+    </ul>
+    </div>
+  </div> <!-- end of container -->
+
+  <!-- JAVASCRIPT --------------------------------------------------------->
+  <script src="js/scripts.js"></script>
+</body>
+</html>
