--- a/html/about.html
+++ b/html/about.html
@@ -19,10 +19,10 @@
 
   <nav>
     <ul>
-    <li><a href="index.md">Start</a></li>
+    <li><a href="index.html">Start</a></li>
     <li><a href="https://becode.org/">BeCode</a></li>
-    <li><a href="beacon.md">The Beacon</a></li>
-    <li><a href="about.md">About</a></li>
+    <li><a href="beacon.html">The Beacon</a></li>
+    <li><a href="about.html">About</a></li>
     </ul>
   </nav>
 
