--- a/html/about.html
+++ b/html/about.html
@@ -12,6 +12,7 @@
   <!-- LINKS --------------------------------------------------------->
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/about.css">
+  <link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono" rel="stylesheet">
 
 </head>
 
